--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -39,7 +39,7 @@
                                                 <label class="custom-control-label" for="customCheck">Lembrar-me</label>
                                             </div>
                                         </div>
-                                        <a href="/" class="btn btn-primary btn-user btn-block">
+                                        <a href="/login" class="btn btn-primary btn-user btn-block">
                                             Login
                                         </a>
                                     </form>
